# pynodz

./: .gitignore  AGENTS.md  README.md  TODO.md  bezier.py  demoShaders.py  demo_shaders.py  htmlEditor.py  html_editor.py  main.py  markdown_editor.py  nodeAttrs.py  nodeCommand.py  nodeUtils.py  node_attrs.py  node_command.py  node_utils.py  pyproject.toml
nodeParts/: Connection.py  Parts.py
nodeTypes/: Node.py  NodeBlock.py  NodeBookmark.py  NodeControl.py  NodeGraph.py  NodeGroup.py  NodeNote.py  NodeShader.py  __init__.py
node_parts/: connection.py  parts.py
node_plugins/: __init__.py
node_plugins/shader/: __init__.py  node_shader.py  settings.py  shaders.py
node_types/: __init__.py  node.py  node_block.py  node_bookmark.py  node_control.py  node_graph.py  node_group.py  node_note.py  node_shader.py
nods/: ar.nod  arduino.nod  notes.nod  raspberry.nod  rez.nod
tests/: test_nodeUtils.py  test_node_utils.py  test_qt.py
